# sdk-boostraping

./: README.md  pyproject.toml
src/services/atlantis/: __init__.py  atlantis.py
src/services/github/: __init__.py  github.py
src/services/templates/lamda/dockerfiles/: go.Dockerfile  java.Dockerfile  javascript.Dockerfile  net.Dockerfile  python.Dockerfile
src/services/templates/lamda/handlers/: Function.cs  Handler.java  index.js  index.py  main.go
src/tests/: __init__.py  conftest.py  test_atlantis.py  test_github.py
